@@ -1,4 +1,4 @@
-# Copyright (C) 1998,1999,2000,2001,2002 by the Free Software Foundation, Inc.
+# Copyright (C) 1998-2010 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -12,7 +12,8 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301,
+# USA.
 
 #
 # site modules
@@ -138,9 +139,14 @@ class DumbBTree:
         return self.dict.has_key(key)
 
     def set_location(self, loc):
-        if not self.dict.has_key(loc):
-            raise KeyError
-        self.current_index = self.sorted.index(loc)
+        index = 0
+        self.__sort()
+        for key in self.sorted:
+            if key[0] == loc:
+                self.current_index = index
+                return key,self.dict[key]
+            index = index + 1
+        raise KeyError(loc)
 
     def __getitem__(self, item):
         return self.dict[item]
@@ -311,9 +317,9 @@ class HyperDatabase(pipermail.Database):
         self.__openIndices(archive)
         subject = subject.lower()
         try:
-            key, tempid=self.subjectIndex.set_location(subject)
-            self.subjectIndex.next()
-            [subject2, date]= key.split('\0')
+            self.subjectIndex.set_location(subject)
+            key, tempid = self.subjectIndex.next()
+            [subject2, date]= key[:2]
             if subject!=subject2: return None
             return tempid
         except KeyError:
