@@ -12,6 +12,8 @@ Here is a history of user visible changes to Mailman.
       Bug #500952 and Bug #500955.
 
   Bug Fixes and other patches
+    - Fixed a bug in pipermail archiving that caused fallback threading by
+      subject to fail.  Bug #266572.
 
     - We now give an HTTP 401 status for authentication failures from admin,
       admindb, private and options logins.
